force-app/main/default/objects/Community_Group_Manager__c/Community_Group_Manager__c.object-meta.xml
<CustomObject>
    <label>Community Group Manager</label>
    <nameField>
        <displayFormat>CGM.{yy}{mm}{0}</displayFormat>
        <label>Group Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Group Managers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>