force-app/main/default/objects/Community_Group_Manager__c/fields/Group_Control__c.field-meta.xml
<CustomField>
    <fullName>Group_Control__c</fullName>
    <description>Represents the Group the Group Membership record is related to.</description>
    <inlineHelpText>Represents the Group the Group Membership record is related to.</inlineHelpText>
    <label>Group Control</label>
    <referenceTo>Community_Group_Control__c</referenceTo>
    <relationshipLabel>Community Group Managers</relationshipLabel>
    <relationshipName>Community_Group_Managers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>