force-app/main/default/objects/Community_Group_Manager__c/fields/Group_Control_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_Control_SF_ID__c</fullName>
    <description>Represents the 18 digit Salesforce Unique ID of the related Group Control record.</description>
    <formula>Group_Control__r.Group_Control_SF_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the 18 digit Salesforce Unique ID of the related Group Control record.</inlineHelpText>
    <label>Group Control SF ID</label>
    <type>Text</type>
</CustomField>