force-app/main/default/objects/Community_Group_Manager__c/fields/Group_Manager_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Group_Manager_SF_ID__c</fullName>
    <description>Represents the 18 digit Salesforce Unique ID.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents the 18 digit Salesforce Unique ID.</inlineHelpText>
    <label>Group Manager SF ID</label>
    <type>Text</type>
</CustomField>