force-app/main/default/objects/Community_Group_Manager__c/fields/Group_Manager_User__c.field-meta.xml
<CustomField>
    <fullName>Group_Manager_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the User that has access to the Group Control record in the Community.</description>
    <inlineHelpText>This is the User that has access to the Group Control record in the Community.</inlineHelpText>
    <label>Group Manager User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Community_Group_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>