force-app/main/default/objects/Community_Group_Manager__c/fields/Manager_Role__c.field-meta.xml
<CustomField>
    <fullName>Manager_Role__c</fullName>
    <description>Defines the role of the group manager for a chatter group. There may only be one Owner. All other values are treated as a group Manager in Chatter.</description>
    <inlineHelpText>Defines the role of the group manager for a chatter group. There may only be one Owner. All other values are treated as a group Manager in Chatter.</inlineHelpText>
    <label>Manager Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>